--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -534,6 +534,9 @@ nav {
 }
 
 @media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden !important;
+  }
   nav {
     padding-top: 40px;
     padding-bottom: 421px;
@@ -563,9 +566,6 @@ nav {
   .container {
     width: 327px;
   }
-  body {
-    overflow-x: hidden !important;
-  }
   .illustration__image-left {
     position: absolute;
     width: 186px;
@@ -579,8 +579,9 @@ nav {
     height: 230.25px;
     right: -50px;
     top: -350px;
-    overflow: hidden;
+    overflow-x: hidden;
   }
+  .perks,
   .perks__box,
   .perks__card,
   .perks__textbox,
